Import of MIKIHOSHI/DBIx-Class-RandomStringColumns-0.02.tar.gz from CPAN.
gitpan-cpan-distribution: DBIx-Class-RandomStringColumns
gitpan-cpan-version:      0.02
gitpan-cpan-path:         MIKIHOSHI/DBIx-Class-RandomStringColumns-0.02.tar.gz
gitpan-cpan-author:       MIKIHOSHI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 Revision history for Perl extension DBIx::Class::RandomStringColumns
 
+0.02  Thu Feb 21 21:27:22 2006
+        - fix typo
+        - add document
+
 0.01  Thu Dec 22 17:53:32 2005
         - original version
