--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
 Revision history for Perl extension DBIx::Class::RandomStringColumns
 
-0.04  Tue Jan 4 15:58:06 2007
-        - Because source_name cannot be acquired when DBIC::Schema::Loader is used, result_class is used. 
+0.04  Wed Feb 27 09:52:02 2007
+        - "solt" is typo. change to "salt". (thx. Mr. Abe)
+        - random_string_columns bug fixed (thx. id:nekokak)
 
 0.03  Wed Nov 22 16:42:00 2006
         - bug fixed (thx. id:nekokak)
